# FirstEasy

./: CMakeLists.txt  easy.h  main.cpp
сpp_files/: 10_itc_fmin.cpp  11_itc_sqrt.cpp  12_itc_skv.cpp  13_itc_spr.cpp  14_itc_str.cpp  15_itc_scir.cpp  16_itc_pow.cpp  17_itc_ispositive.cpp  18_itc_ispositive_d.cpp  1_itc_name.cpp  2_itc_fio.cpp  3_itc_abs.cpp  4_itc_fabs.cpp  5_itc_revnbr.cpp  6_itc_iseven.cpp  7_itc_max.cpp  8_itc_min.cpp  9_itc_fmax.cpp
