cmake_minimum_required(VERSION 3.26)
project(FirstEasy)

set(CMAKE_CXX_STANDARD 17)

add_executable(FirstEasy main.cpp
        easy.h
        сpp_files/1_itc_name.cpp
        сpp_files/2_itc_fio.cpp
        сpp_files/3_itc_abs.cpp
        сpp_files/6_itc_iseven.cpp
        сpp_files/7_itc_max.cpp
        сpp_files/11_itc_sqrt.cpp
        сpp_files/8_itc_min.cpp
        сpp_files/17_itc_ispositive.cpp
        сpp_files/9_itc_fmax.cpp
        сpp_files/18_itc_ispositive_d.cpp
        сpp_files/4_itc_fabs.cpp
        сpp_files/5_itc_revnbr.cpp
        сpp_files/10_itc_fmin.cpp
        сpp_files/12_itc_skv.cpp
        сpp_files/13_itc_spr.cpp
        сpp_files/14_itc_str.cpp
        сpp_files/15_itc_scir.cpp
        сpp_files/16_itc_pow.cpp)
